--- a/src/ShoppingCard.Domain/ShoppingCard.Domain.csproj
+++ b/src/ShoppingCard.Domain/ShoppingCard.Domain.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
