- implement cachingService in the project - implement cacheHelper in the project - implement CachedBasketController and testing it if it works right - adding xml documents of a project and make swagger to use it for documentation - adding Athena Project to the source code

--- a/ShoppingCard.Api/ShoppingCard.Api.csproj
+++ b/ShoppingCard.Api/ShoppingCard.Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>C:\Users\Arash\source\repos\ShppingCard\ShoppingCard.Api\basket.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
