--- a/Athena.RabbitMQHelper/Athena.RabbitMQHelper.csproj
+++ b/Athena.RabbitMQHelper/Athena.RabbitMQHelper.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.3.12" />
     <PackageReference Include="EasyNetQ.DI.Microsoft" Version="7.3.12" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.2" />
