--- a/ShoppingCard.Consumer/ShoppingCard.Consumer.csproj
+++ b/ShoppingCard.Consumer/ShoppingCard.Consumer.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="5.2.0" />
+    <PackageReference Include="EasyNetQ" Version="7.3.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
@@ -16,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Athena.RabbitMQHelper\Athena.RabbitMQHelper.csproj" />
+    <ProjectReference Include="..\ShoppingCard.BrokerMessage\ShoppingCard.BrokerMessage.csproj" />
     <ProjectReference Include="..\ShoppingCard.Service\ShoppingCard.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ConsumerHostedServices\" />
+    <Folder Include="Consumers\" />
   </ItemGroup>
 </Project>
