- adding user model and ef configurations - adding consumer and testing it - implementing requestLoggerMiddleware - implementing exceptionHandlingMiddleware

--- a/ShoppingCard.Api/appsettings.json
+++ b/ShoppingCard.Api/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "basketDb": "Host=localhost;Database=basketDb;Username=postgres;Password=123",
     "redis": "localhost"
+  },
+
+  "Rabbit": {
+    "Connection": "host=localhost"
   }
 }
