--- a/ShoppingCard.Consumer/appsettings.Development.json
+++ b/ShoppingCard.Consumer/appsettings.Development.json
@@ -3,6 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    },
+    "Rabbit": "host:localhost"
+
   }
 }
