--- a/ShoppingCard.Consumer/appsettings.json
+++ b/ShoppingCard.Consumer/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Rabbit": "host:localhost"
+  "Rabbit": {
+    "Connection": "host=localhost"
+  }
 }
