--- a/ShoppingCard.Api/ShoppingCard.Api.csproj
+++ b/ShoppingCard.Api/ShoppingCard.Api.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <DocumentationFile>C:\Users\Arash\source\repos\ShppingCard\ShoppingCard.Api\basket.xml</DocumentationFile>
+    <UserSecretsId>6f8a2bd3-7d09-4c09-9626-9dca17b4db8c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,10 +16,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Athena.RabbitMQHelper\Athena.RabbitMQHelper.csproj" />
+    <ProjectReference Include="..\ShoppingCard.BrokerMessage\ShoppingCard.BrokerMessage.csproj" />
     <ProjectReference Include="..\ShoppingCard.Service\ShoppingCard.Service.csproj" />
   </ItemGroup>
 
