--- a/ShoppingCard.Consumer/ShoppingCard.Consumer.csproj
+++ b/ShoppingCard.Consumer/ShoppingCard.Consumer.csproj
@@ -11,17 +11,17 @@
     <PackageReference Include="EasyNetQ" Version="7.3.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Athena.RabbitMQHelper\Athena.RabbitMQHelper.csproj" />
     <ProjectReference Include="..\ShoppingCard.BrokerMessage\ShoppingCard.BrokerMessage.csproj" />
     <ProjectReference Include="..\ShoppingCard.Service\ShoppingCard.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ConsumerHostedServices\" />
-    <Folder Include="Consumers\" />
   </ItemGroup>
 </Project>
