- adding loging logic to the program - adding jwt to the program and the swagger - adding authorizationMiddleware to handle jwt access tokens of the program

--- a/ShoppingCard.Service/ShoppingCard.Service.csproj
+++ b/ShoppingCard.Service/ShoppingCard.Service.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Athena.AspDotnetHelper\Athena.AspDotnetHelper.csproj" />
     <ProjectReference Include="..\Athena.CacheHelper\Athena.CacheHelper.csproj" />
     <ProjectReference Include="..\ShoppingCard.Repository\ShoppingCard.Repository.csproj" />
   </ItemGroup>
