--- a/Athena.AspDotnetHelper/Athena.AspDotnetHelper.csproj
+++ b/Athena.AspDotnetHelper/Athena.AspDotnetHelper.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
