- test hangfire - test a simple actionFilter with parameter

--- a/ShoppingCard.Api/appsettings.json
+++ b/ShoppingCard.Api/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "basketDb": "Host=localhost;Database=basketDb;Username=postgres;Password=123",
-    "redis": "localhost"
+    "redis": "localhost",
+    "HangfireConnection": "Host=localhost;Database=hangfireDb;Username=postgres;Password=123"
   },
 
   "Rabbit": {
