--- a/ShoppingCard.Consumer/appsettings.json
+++ b/ShoppingCard.Consumer/appsettings.json
@@ -7,5 +7,8 @@
   },
   "Rabbit": {
     "Connection": "host=localhost"
+  },
+  "ConnectionStrings": {
+    "basketDb": "Host=localhost;Database=basketDb;Username=postgres;Password=123"
   }
 }
